fix: add missing jvm options