@@ -11,4 +11,4 @@ ARG DEPENDENCY=/workspace/server/build/dependency
 COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /jifa/lib
 COPY --from=build ${DEPENDENCY}/META-INF /jifa/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /jifa
-ENTRYPOINT ["java","-Djdk.util.zip.disableZip64ExtraFieldValidation=true","-cp","jifa:jifa/lib/*","org.eclipse.jifa.server.Launcher"]
+ENTRYPOINT ["java","--add-opens=java.base/java.lang=ALL-UNNAMED","--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED","-Djdk.util.zip.disableZip64ExtraFieldValidation=true","-cp","jifa:jifa/lib/*","org.eclipse.jifa.server.Launcher"]
